EXTRA_DIST = \
	gluBeginCurve.html \
	gluBeginPolygon.html \
	gluBeginSurface.html \
	gluBeginTrim.html \
	gluBuild2DMipmapLevels.html \
	gluBuild2DMipmaps.html \
	gluCheckExtension.html \
	gluCylinder.html \
	gluDeleteNurbsRenderer.html \
	gluDeleteQuadric.html \
	gluDeleteTess.html \
	gluDisk.html \
	gluEndCurve.html \
	gluEndPolygon.html \
	gluEndSurface.html \
	gluEndTrim.html \
	gluErrorString.html \
	glues.html \
	gluGetNurbsProperty.html \
	gluGetString.html \
	gluGetTessProperty.html \
	gluLoadSamplingMatrices.html \
	gluLookAt.html \
	gluNewNurbsRenderer.html \
	gluNewQuadric.html \
	gluNewTess.html \
	gluNextContour.html \
	gluNurbsCallbackDataEXT.html \
	gluNurbsCallbackData.html \
	gluNurbsCallback.html \
	gluNurbsCurve.html \
	gluNurbsProperty.html \
	gluNurbsSurface.html \
	gluOrtho2D.html \
	gluPartialDisk.html \
	gluPerspective.html \
	gluPickMatrix.html \
	gluProject.html \
	gluPwlCurve.html \
	gluQuadricCallback.html \
	gluQuadricDrawStyle.html \
	gluQuadricNormals.html \
	gluQuadricOrientation.html \
	gluQuadricTexture.html \
	gluScaleImage.html \
	gluSphere.html \
	gluTessBeginContour.html \
	gluTessBeginPolygon.html \
	gluTessCallback.html \
	gluTessEndContour.html \
	gluTessEndPolygon.html \
	gluTessNormal.html \
	gluTessProperty.html \
	gluTessVertex.html \
	gluUnProject4.html \
	gluUnProject.html

MAINTAINERCLEANFILES = Makefile.in
