lib_LTLIBRARIES = libGLUES.la

libGLUES_la_CFLAGS = \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/libnurbs/interface \
	-I$(top_srcdir)/src/libnurbs/internals \
	-I$(top_srcdir)/src/libnurbs/nurbtess \
	$(AM_CFLAGS)

libGLUES_la_CXXFLAGS = \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/libnurbs/interface \
	-I$(top_srcdir)/src/libnurbs/internals \
	-I$(top_srcdir)/src/libnurbs/nurbtess \
	$(AM_CXXFLAGS)

libGLUES_la_SOURCES = \
	glues_error.c \
	glues_error.h \
	glues_mipmap.c \
	glues_mipmap.h \
	glues_project.c \
	glues_project.h \
	glues_quad.c \
	glues_quad.h \
	glues_registry.c \
	glues_registry.h \
	libnurbs/interface/gles_evaluator.cc \
	libnurbs/interface/bezierPatchMesh.h \
	libnurbs/interface/incurveeval.cc \
	libnurbs/interface/glimports.h \
	libnurbs/interface/mystdlib.h \
	libnurbs/interface/glrenderer.h \
	libnurbs/interface/glinterface.cc \
	libnurbs/interface/bezierPatch.cc \
	libnurbs/interface/gles_evaluator.h \
	libnurbs/interface/glcurveval.cc \
	libnurbs/interface/bezierEval.h \
	libnurbs/interface/insurfeval.cc \
	libnurbs/interface/bezierEval.cc \
	libnurbs/interface/bezierPatchMesh.cc \
	libnurbs/interface/glsurfeval.h \
	libnurbs/interface/mystdio.h \
	libnurbs/interface/glsurfeval.cc \
	libnurbs/interface/glrenderer.cc \
	libnurbs/interface/glcurveval.h \
	libnurbs/interface/bezierPatch.h \
	libnurbs/internals/arcsorter.cc \
	libnurbs/internals/monotonizer.cc \
	libnurbs/internals/maplist.cc \
	libnurbs/internals/bezierarc.h \
	libnurbs/internals/trimvertpool.h \
	libnurbs/internals/curve.cc \
	libnurbs/internals/jarcloc.h \
	libnurbs/internals/types.h \
	libnurbs/internals/trimvertex.h \
	libnurbs/internals/trimvertpool.cc \
	libnurbs/internals/patch.cc \
	libnurbs/internals/curvelist.h \
	libnurbs/internals/flistsorter.h \
	libnurbs/internals/arcsorter.h \
	libnurbs/internals/subdivider.h \
	libnurbs/internals/arc.cc \
	libnurbs/internals/displaymode.h \
	libnurbs/internals/varray.cc \
	libnurbs/internals/flist.h \
	libnurbs/internals/nurbstess.h \
	libnurbs/internals/gridvertex.h \
	libnurbs/internals/varray.h \
	libnurbs/internals/dataTransform.cc \
	libnurbs/internals/bin.h \
	libnurbs/internals/pwlarc.h \
	libnurbs/internals/ccw.cc \
	libnurbs/internals/displaylist.h \
	libnurbs/internals/bin.cc \
	libnurbs/internals/nurbstess.cc \
	libnurbs/internals/flist.cc \
	libnurbs/internals/mymath.h \
	libnurbs/internals/splitarcs.cc \
	libnurbs/internals/patchlist.cc \
	libnurbs/internals/arc.h \
	libnurbs/internals/basiccrveval.h \
	libnurbs/internals/knotvector.cc \
	libnurbs/internals/flistsorter.cc \
	libnurbs/internals/uarray.cc \
	libnurbs/internals/cachingeval.cc \
	libnurbs/internals/trimregion.h \
	libnurbs/internals/curve.h \
	libnurbs/internals/cachingeval.h \
	libnurbs/internals/arctess.cc \
	libnurbs/internals/basiccrveval.cc \
	libnurbs/internals/uarray.h \
	libnurbs/internals/arctess.h \
	libnurbs/internals/nurbsinterfac.cc \
	libnurbs/internals/reader.h \
	libnurbs/internals/defines.h \
	libnurbs/internals/trimline.cc \
	libnurbs/internals/mystring.h \
	libnurbs/internals/mysetjmp.h \
	libnurbs/internals/quilt.cc \
	libnurbs/internals/intersect.cc \
	libnurbs/internals/subdivider.cc \
	libnurbs/internals/quilt.h \
	libnurbs/internals/dataTransform.h \
	libnurbs/internals/mycode.cc \
	libnurbs/internals/mapdesc.cc \
	libnurbs/internals/knotvector.h \
	libnurbs/internals/myassert.h \
	libnurbs/internals/basicsurfeval.h \
	libnurbs/internals/gridtrimvertex.h \
	libnurbs/internals/mapdesc.h \
	libnurbs/internals/tobezier.cc \
	libnurbs/internals/reader.cc \
	libnurbs/internals/slicer.h \
	libnurbs/internals/patchlist.h \
	libnurbs/internals/curvesub.cc \
	libnurbs/internals/coveandtiler.cc \
	libnurbs/internals/trimregion.cc \
	libnurbs/internals/curvelist.cc \
	libnurbs/internals/patch.h \
	libnurbs/internals/hull.cc \
	libnurbs/internals/displaylist.cc \
	libnurbs/internals/nurbsconsts.h \
	libnurbs/internals/sorter.cc \
	libnurbs/internals/renderhints.cc \
	libnurbs/internals/trimline.h \
	libnurbs/internals/gridline.h \
	libnurbs/internals/slicer.cc \
	libnurbs/internals/sorter.h \
	libnurbs/internals/renderhints.h \
	libnurbs/internals/simplemath.h \
	libnurbs/internals/monoTriangulationBackend.cc \
	libnurbs/internals/maplist.h \
	libnurbs/internals/bufpool.cc \
	libnurbs/internals/hull.h \
	libnurbs/internals/coveandtiler.h \
	libnurbs/internals/monotonizer.h \
	libnurbs/internals/bufpool.h \
	libnurbs/internals/backend.h \
	libnurbs/internals/mapdescv.cc \
	libnurbs/internals/basicsurfeval.cc \
	libnurbs/internals/mesher.cc \
	libnurbs/internals/mesher.h \
	libnurbs/internals/backend.cc \
	libnurbs/nurbtess/gridWrap.h \
	libnurbs/nurbtess/definitions.h \
	libnurbs/nurbtess/sampleCompTop.h \
	libnurbs/nurbtess/sampleMonoPoly.h \
	libnurbs/nurbtess/sampledLine.h \
	libnurbs/nurbtess/monoPolyPart.cc \
	libnurbs/nurbtess/sampleCompTop.cc \
	libnurbs/nurbtess/partitionY.cc \
	libnurbs/nurbtess/searchTree.h \
	libnurbs/nurbtess/primitiveStream.h \
	libnurbs/nurbtess/polyUtil.cc \
	libnurbs/nurbtess/polyDBG.h \
	libnurbs/nurbtess/rectBlock.cc \
	libnurbs/nurbtess/sampleCompBot.h \
	libnurbs/nurbtess/glimports.h \
	libnurbs/nurbtess/zlassert.h \
	libnurbs/nurbtess/sampleCompRight.cc \
	libnurbs/nurbtess/mystdlib.h \
	libnurbs/nurbtess/primitiveStream.cc \
	libnurbs/nurbtess/directedLine.h \
	libnurbs/nurbtess/sampleComp.h \
	libnurbs/nurbtess/quicksort.h \
	libnurbs/nurbtess/rectBlock.h \
	libnurbs/nurbtess/partitionY.h \
	libnurbs/nurbtess/monoTriangulation.cc \
	libnurbs/nurbtess/searchTree.cc \
	libnurbs/nurbtess/quicksort.cc \
	libnurbs/nurbtess/monoTriangulation.h \
	libnurbs/nurbtess/gridWrap.cc \
	libnurbs/nurbtess/monoChain.h \
	libnurbs/nurbtess/directedLine.cc \
	libnurbs/nurbtess/mystdio.h \
	libnurbs/nurbtess/sampledLine.cc \
	libnurbs/nurbtess/partitionX.h \
	libnurbs/nurbtess/sampleCompBot.cc \
	libnurbs/nurbtess/monoPolyPart.h \
	libnurbs/nurbtess/sampleMonoPoly.cc \
	libnurbs/nurbtess/partitionX.cc \
	libnurbs/nurbtess/polyUtil.h \
	libnurbs/nurbtess/sampleComp.cc \
	libnurbs/nurbtess/monoChain.cc \
	libnurbs/nurbtess/polyDBG.cc \
	libnurbs/nurbtess/sampleCompRight.h \
	libtess/dict.c \
	libtess/dict.h \
	libtess/dict-list.h \
	libtess/geom.c \
	libtess/geom.h \
	libtess/memalloc.c \
	libtess/memalloc.h \
	libtess/mesh.c \
	libtess/mesh.h \
	libtess/normal.c \
	libtess/normal.h \
	libtess/priorityq.c \
	libtess/priorityq.h \
	libtess/priorityq-heap.h \
	libtess/priorityq-heap.i \
	libtess/priorityq-sort.h \
	libtess/render.c \
	libtess/render.h \
	libtess/sweep.c \
	libtess/sweep.h \
	libtess/tess.c \
	libtess/tess.h \
	libtess/tessmono.c \
	libtess/tessmono.h

EXTRA_DIST = \
	libtess/alg-outline \
	libtess/README

glesdir = $(includedir)/GLES
gles_HEADERS = glues.h glu.h

MAINTAINERCLEANFILES = Makefile.in
